--- a/webinterface/webroot/login.vm
+++ b/webinterface/webroot/login.vm
@@ -1,15 +1,40 @@
-<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <HTML>
-<HEAD><TITLE>:: Powerfolder $PowerFolderVersion Webinterface login ::</TITLE></HEAD>
+<HEAD><TITLE>:: Powerfolder $PowerFolderVersion Webinterface login ::</TITLE>
+<!-- cannot use global style sheet in login since when not logged in there will 
+be only serving THIS page and not the CSS page --> 
+<STYLE>
+body, td, .writetext {
+	font-family : verdana, sans-serif;
+	font-size : 10px;
+}
+
+h1  {
+	font-variant : small-caps;	
+	font-size : 14px;
+	font-weight : normal;
+}
+
+.error {
+	font-weight : bold;
+}
+
+.button {
+	font-family : verdana, sans-serif;
+	font-variant : small-caps;	
+	font-size : 14px;
+}
+</STYLE>
+</HEAD>
 <BODY>
 <h1>Powerfolder $PowerFolderVersion Webinterface login</h1><BR />
 #if ($showError)
    <P class=error>$ErrorMessage</P>
 #end
 <form action="login" name="login" id="login" method="get">
-<TABLE border=0><TR><TD>Username:</TD><TD><input type="text" name="Username" size="10" maxlength="20" /></TD></TR>
-<TR><TD>Password:</TD><TD><input type="password" name="Password" size="10" maxlength="20" /></TD></TR>
-<TR><TD></TD><TD align="right"><input type="submit" name="Login" value="Login" /></TD></TR>
+<TABLE border=0><TR><TD>Username:</TD><TD><input class="writetext" type="text" name="Username" size="15" maxlength="20" /></TD></TR>
+<TR><TD>Password:</TD><TD><input class="writetext" type="password" name="Password" size="15" maxlength="20" /></TD></TR>
+<TR><TD></TD><TD align="right"><input class="button" type="submit" name="Login" value="Login" /></TD></TR>
 </TABLE></form></BODY></HTML>
             
