--- a/src/web-resources/web-resources/templates/folderlist.vm
+++ b/src/web-resources/web-resources/templates/folderlist.vm
@@ -4,9 +4,9 @@
 	#foreach($folder in $folderList)        	
 	<tr id="$folder.getId()">		
 		#if ($folder.isSecret())
-			 <td><img src="/icons/Folder_yellow.gif" alt="S" border="0" /></td>
+			 <td><img src="/images/Folder_yellow.gif" alt="S" border="0" /></td>
 		#else 
-			<td><img src="/icons/Folder.gif" alt="P" border="0" /></td>
+			<td><img src="/images/Folder.gif" alt="P" border="0" /></td>
 		#end		
 	<td><a href="#" class="link" onclick="showFolder('$folder.getId()', '/', 'name', 'ascending')">$folder.getName()</a></td>	
 	<td width="10px"></td>
